# terrain

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shaders/: plane.frag  plane.vert
include/geometries/: plane.hpp  terrain.hpp
src/: main.cpp
src/render/: splatmap.cpp
